--- a/front-end.desafio/src/app/components/task/task-list/task-list.component.css
+++ b/front-end.desafio/src/app/components/task/task-list/task-list.component.css
@@ -1,34 +1,34 @@
 table {
     width: 100%;
-  }
-  
-  .example-drag-cursor {
+}
+
+.example-drag-cursor {
     margin-right: 16px;
     cursor: move;
-  }
-  
-  .cdk-drag-preview {
+}
+
+.cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-      0 8px 10px 1px rgba(0, 0, 0, 0.14),
-      0 3px 14px 2px rgba(0, 0, 0, 0.12);
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
     background-color: white;
-  }
-  
-  .cdk-drag-placeholder {
-    opacity: 0;
-  }
-  
-  .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
-  .cdk-drop-list-dragging .mat-row:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
+}
 
-  .container {
+.cdk-drag-placeholder {
+    opacity: 0;
+}
+
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drop-list-dragging .mat-row:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.container {
     width: 90%;
     margin: auto;
 }
@@ -50,6 +50,12 @@ h1 {
     width: 100%;
     text-align: center;
     margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.highlight {
+    background: #f7f08e;
+    /* green */
 }
 
 .radio-button-container {
@@ -120,6 +126,6 @@ h1 {
     color: red;
 }
 
-.done{
+.done {
     color: green;
 }
