--- a/front-end.desafio/src/app/components/task/task-form-popup/task-form-popup.component.css
+++ b/front-end.desafio/src/app/components/task/task-form-popup/task-form-popup.component.css
@@ -1,7 +1,18 @@
-.fullWidth{
+.fullWidth {
     width: 100%;
 }
 
-.form{
+.form {
     margin-top: 1rem;
+}
+
+.success {
+    background-color: green;
+    color: white;
+}
+
+.actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
