--- a/front-end.desafio/src/app/components/task/task-list/task-list.component.css
+++ b/front-end.desafio/src/app/components/task/task-list/task-list.component.css
@@ -33,20 +33,22 @@ table {
     margin: auto;
 }
 
-table {
-    width: 100%;
+mat-header-cell,
+mat-cell {
+    display: flex;
+    justify-content: center;
 }
 
-mat-form-field {
-    width: 100%;
+.mat-table {
+    width: auto;
 }
 
-button {
+.button {
     width: 100%;
     margin-bottom: 1rem;
 }
 
-h1 {
+.title {
     width: 100%;
     text-align: center;
     margin-bottom: 1rem;
@@ -67,8 +69,4 @@ h1 {
 
 .delete {
     color: red;
-}
-
-.done {
-    color: green;
 }
