--- a/front-end.desafio/src/app/components/task/task-form-popup/task-form-popup.component.css
+++ b/front-end.desafio/src/app/components/task/task-form-popup/task-form-popup.component.css
@@ -7,8 +7,8 @@
 }
 
 .success {
-    background-color: green;
-    color: white;
+    background-color: green !important;
+    color: white !important;
 }
 
 .actions {
