--- a/front-end.desafio/src/app/components/task/task-list/task-list.component.css
+++ b/front-end.desafio/src/app/components/task/task-list/task-list.component.css
@@ -1,5 +1,50 @@
+body {
+    background-color: #121212;
+    margin: 0;
+    padding: 1rem;
+
+}
+
+.container {
+    width: 90%;
+    height: 100%s;
+    margin: auto;
+    background-color: #1e1e1e;
+    padding: 0.5rem;
+    border-radius: 8px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
+}
+
+.title {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    color: #ffffff;
+}
+
 table {
     width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.mat-table {
+    width: auto;
+
+}
+
+mat-header-cell,
+mat-cell {
+    display: flex;
+    justify-content: center;
+    color: #333333;
+}
+
+.highlight {
+    background: #e0e0e0;
 }
 
 .example-drag-cursor {
@@ -13,7 +58,7 @@ table {
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
         0 8px 10px 1px rgba(0, 0, 0, 0.14),
         0 3px 14px 2px rgba(0, 0, 0, 0.12);
-    background-color: white;
+    background-color: #f5f5f5;
 }
 
 .cdk-drag-placeholder {
@@ -28,45 +73,45 @@ table {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.container {
-    width: 90%;
-    margin: auto;
-}
-
-mat-header-cell,
-mat-cell {
-    display: flex;
-    justify-content: center;
-}
-
-.mat-table {
-    width: auto;
-}
-
 .button {
     width: 100%;
     margin-bottom: 1rem;
 }
 
-.title {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-}
-
-.highlight {
-    background: #f7f08e;
-}
-
-.center-text {
-    text-align: center;
+.add-button {
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    z-index: 1000;
+    background-color: orange;
+    color: #ffffff;
 }
 
 .edit {
-    color: rgb(6, 142, 253);
+    color: #42a5f5;
 }
 
 .delete {
-    color: red;
+    color: #e57373;
+}
+
+.empty-state {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10%;
+    text-align: center;
+}
+
+.empty-image {
+    width: 50%;
+    max-width: 300px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.empty-message {
+    font-size: 16px;
+    color: black;
 }
