--- a/front-end.desafio/src/app/components/task/task-list/task-list.component.css
+++ b/front-end.desafio/src/app/components/task/task-list/task-list.component.css
@@ -115,3 +115,20 @@ mat-cell {
     font-size: 16px;
     color: black;
 }
+
+.footer {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    font-size: 14px;
+}
+
+.footer a {
+    text-decoration: none;
+    color: #007bff;
+    margin-right: 10px;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
