--- a/front-end.desafio/src/app/components/task/task-list/task-list.component.html
+++ b/front-end.desafio/src/app/components/task/task-list/task-list.component.html
@@ -57,4 +57,10 @@
             <mat-icon>add</mat-icon>
         </button>
     </div>
+
+    <!-- Footer no Canto Inferior Esquerdo -->
+    <footer class="footer">
+        <a [href]="getSwaggerUrl()" target="_blank">Documentação da API</a> |
+        <a href="https://github.com/Joao-Kleber-Linhalis/desafio_fattocs" target="_blank">Código Fonte</a>
+    </footer>
 </body>
